--- a/Realisation/login.html
+++ b/Realisation/login.html
@@ -26,20 +26,20 @@ if (isset($_POST['username'], $_POST['password'])) {
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-  <body>
-    <div class="container">
+  <body style="background:url(nature-background.jpg)">
+    <div class="container" >
       <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
           <div class="card border-0 shadow rounded-4 my-5">
             <div class="card-body p-4 p-sm-5">
               <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
-              <form>
+              <form method="post">
                 <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                  <input type="email" class="form-control"id="floatingInput" placeholder="name@example.com" name="username">
                   <label for="floatingInput">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
                   <label for="floatingPassword">Password</label>
                 </div>
   
