--- a/Realisation/.vscode/index.html
+++ b/Realisation/.vscode/index.html
@@ -19,20 +19,53 @@
 
     <title>Website Menu #8</title>
   </head>
-  <body>
+  <body class="hero" style="background-image: url('images/nature-background.jpg');">
 
 
     <header role="banner">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="index.html">PME</a>
+          <a class="navbar-brand"  href="index.html">PME</a>
         </div>
       </nav>
     </header>
     <!-- END header -->
-    
+      <div class="container" style="padding-top: 50px;">
+        <div class="row">
+          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card border-0 shadow rounded-4 my-5 " >
+              <div class="card-body p-4 p-sm-5">
+                <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+                <form method="post">
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"
+                      name="username">
+                    <!-- <label for="floatingInput">Email address</label> -->
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                    <!-- <label for="floatingPassword">Password</label> -->
+                  </div>
+      
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                    <label class="form-check-label" for="rememberPasswordCheck">
+                      Remember password
+                    </label>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                      in</button>
+                  </div>
+                  <hr class="my-4">
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <div class="hero" style="background-image: url('images/nature-background.jpg');"></div>
+    <!-- <div class="hero" style="background-image: url('images/nature-background.jpg');"></div> -->
   
 
 
